<resources>
    <string name="app_name">Calcutron 1000</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="sign">+/-</string>
    <string name="decimal">.</string>
    <string name="subtraction">-</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">÷</string>
    <string name="multiplication">x</string>
    <string name="pi">π</string>
    <string name="squared">x²</string>
    <string name="addition">+</string>
    <string name="right_bracket">)</string>
    <string name="left_bracket">(</string>
    <string name="squared_root">√</string>
    <string name="land_equals">=</string>
    <string name="land_addition">+</string>
    <string name="land_subtraction">-</string>
    <string name="land_multiplication">×</string>
    <string name="land_division">÷</string>
    <string name="land_9">9</string>
    <string name="land_c">C</string>
    <string name="land_decimal">.</string>
    <string name="land_3">3</string>
    <string name="land_6">6</string>
    <string name="land_8">8</string>
    <string name="land_2">2</string>
    <string name="land_0">0</string>
    <string name="land_sign">+/-</string>
    <string name="land_ce">CE</string>
    <string name="land_7">7</string>
    <string name="land_1">1</string>
    <string name="land_4">4</string>
    <string name="land_5">5</string>
    <string name="land_squared">x²</string>
    <string name="land_squared_root">√</string>
    <string name="land_pi">π</string>
    <string name="land_right_bracket">)</string>
    <string name="land_left_bracket">(</string>
    <string name="title">Calcutron 1000</string>
    <string name="land_title">Computron 1000</string>
    <string name="logo">logo</string>
    <string name="backspace">←</string>
    <string name="land_backspace">←</string>
</resources>
