<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thegoodd.comp3025_w2017_assignment1_calculator.calculator"
    android:background="@android:color/darker_gray">

    <Button
        android:text="@string/ce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seven"
        android:layout_alignParentStart="true"
        android:id="@+id/clear_everything"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:layout_above="@+id/eight"
        android:layout_toEndOf="@+id/seven"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/clear"
        android:layout_toEndOf="@+id/eight"
        android:id="@+id/backspace"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:minHeight="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/zero" />

    <Button
        android:text="@string/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subtraction"
        android:layout_toEndOf="@+id/six"
        android:id="@+id/multiplication"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/division"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColorLink="@color/colorAccent"
        android:layout_alignBaseline="@+id/backspace"
        android:layout_alignBottom="@+id/backspace"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/three"
        android:layout_alignParentEnd="true"
        android:id="@+id/subtraction"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addition"
        android:layout_above="@+id/equals"
        android:layout_alignParentEnd="true"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/equals"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:minHeight="60dp"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zero"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/sign"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:minHeight="60dp" />

    <Button
        android:text="@string/_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignBaseline="@+id/two"
        android:layout_alignBottom="@+id/two"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_above="@+id/zero"
        android:layout_toEndOf="@+id/sign" />

    <Button
        android:text="@string/_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignBaseline="@+id/two"
        android:layout_alignBottom="@+id/two"
        android:layout_toEndOf="@+id/zero" />

    <Button
        android:text="@string/_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/four"
        android:layout_above="@+id/one"
        android:layout_alignParentStart="true"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/two"
        android:layout_toEndOf="@+id/four"
        android:id="@+id/five"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/three"
        android:layout_toEndOf="@+id/five"
        android:id="@+id/six"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_alignParentStart="true"
        android:id="@+id/seven"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/seven"
        android:layout_toEndOf="@+id/four"
        android:id="@+id/eight"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eight"
        android:layout_toEndOf="@+id/five"
        android:id="@+id/nine"
        android:minHeight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:id="@+id/result"
        android:minWidth="240dp"
        android:maxWidth="240dp"
        android:background="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textDirection="rtl" />


</RelativeLayout>
